# mcp-repo2llm

./: .gitignore  README.md  emma_tools_contents.txt  mcp-repo2llm-server.py  pyproject.toml
repo2llm/: __init__.py  githubrepo2txt.py  gitlibrepo2txt.py  localrepo2txt.py  readme.md
